Teacher edits