@@ -8,8 +8,6 @@ import ru.netology.domain.Issue;
 import ru.netology.repository.IssueRepository;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,23 +27,23 @@ class OneItemIssueManagerTest {
 
     @Test
     void shouldGetOpened() {
-        ArrayList<Issue> expected = new ArrayList<>(Arrays.asList(firstIssue));
-        ArrayList<Issue> actual = manager.getOpened();
+        List<Issue> expected = List.of(firstIssue);
+        List<Issue> actual = manager.getOpened();
         assertEquals(expected, actual);
     }
 
     @Test
     void shouldGetClosed() {
         manager.closeById(1);
-        ArrayList<Issue> expected = new ArrayList<>(Arrays.asList(firstIssue));
-        ArrayList<Issue> actual = manager.getClosed();
+        List<Issue> expected = List.of(firstIssue);
+        List<Issue> actual = manager.getClosed();
         assertEquals(expected, actual);
     }
 
     @Test
     void shouldGetAll() {
-        ArrayList<Issue> expected = new ArrayList<>(Arrays.asList(firstIssue));
-        ArrayList<Issue> actual = manager.getAll();
+        List<Issue> expected = List.of(firstIssue);
+        List<Issue> actual = manager.getAll();
         assertEquals(expected, actual);
     }
 
@@ -53,15 +51,15 @@ class OneItemIssueManagerTest {
     void shouldReopen() {
         manager.closeById(1);
         manager.openById(1);
-        ArrayList<Issue> expected = new ArrayList<>(Arrays.asList(firstIssue));
-        ArrayList<Issue> actual = manager.getOpened();
+        List<Issue> expected = List.of(firstIssue);
+        List<Issue> actual = manager.getOpened();
         assertEquals(expected, actual);
     }
 
     @Test
     void shouldSortByDate() {
-        ArrayList<Issue> expected = new ArrayList<>(Arrays.asList(firstIssue));
-        ArrayList<Issue> actual = manager.sortByDate(comparator);
+        List<Issue> expected = List.of(firstIssue);
+        List<Issue> actual = manager.sortBy(comparator);
         assertEquals(expected, actual);
     }
 
